DigicielFull/force-app/main/default/objects/Lead/fields/Account_Record_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Value__c</fullName>
    <label>Account Record Type Value</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Fiji GSM</fullName>
            </value>
            <value>
                <fullName>Fiji ICT</fullName>
            </value>
            <value>
                <fullName>Fiji Mobile</fullName>
            </value>
            <value>
                <fullName>PNG GSM</fullName>
            </value>
            <value>
                <fullName>PNG ICT</fullName>
            </value>
            <value>
                <fullName>PNG Mobile</fullName>
            </value>
            <value>
                <fullName>Samoa GSM</fullName>
            </value>
            <value>
                <fullName>Samoa ICT</fullName>
            </value>
            <value>
                <fullName>Samoa Mobile</fullName>
            </value>
            <value>
                <fullName>Tonga GSM</fullName>
            </value>
            <value>
                <fullName>Tonga ICT</fullName>
            </value>
            <value>
                <fullName>Tonga Mobile</fullName>
            </value>
            <value>
                <fullName>Vanuatu GSM</fullName>
            </value>
            <value>
                <fullName>Vanuatu ICT</fullName>
            </value>
            <value>
                <fullName>Vanuatu Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>