DigicielFull/force-app/main/default/objects/Lead/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <label>Account State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>In Collections</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>