DigicielFull/force-app/main/default/objects/Lead/fields/Ad_Formats__c.field-meta.xml
<CustomField>
    <fullName>Ad_Formats__c</fullName>
    <label>Ad Formats</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RH Column Top</fullName>
            </value>
            <value>
                <fullName>RH Column Lower</fullName>
            </value>
            <value>
                <fullName>Billboard</fullName>
            </value>
            <value>
                <fullName>Leaderboard</fullName>
            </value>
            <value>
                <fullName>Mobile Website Bottom</fullName>
            </value>
            <value>
                <fullName>App Overlay</fullName>
            </value>
            <value>
                <fullName>App Bottom</fullName>
            </value>
            <value>
                <fullName>Page Takeover</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Pre-Roll Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>