DigicielFull/force-app/main/default/objects/Lead/fields/Additional_Add_on_Packages__c.field-meta.xml
<CustomField>
    <fullName>Additional_Add_on_Packages__c</fullName>
    <label>Additional Add on Packages</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adult</fullName>
            </value>
            <value>
                <fullName>Adult Service</fullName>
            </value>
            <value>
                <fullName>Bulk Service</fullName>
            </value>
            <value>
                <fullName>Educational Package</fullName>
            </value>
            <value>
                <fullName>HD Package</fullName>
            </value>
            <value>
                <fullName>International Package</fullName>
            </value>
            <value>
                <fullName>Movie</fullName>
            </value>
            <value>
                <fullName>Movie Package</fullName>
            </value>
            <value>
                <fullName>Movie Package( Only 4 Channels)</fullName>
            </value>
            <value>
                <fullName>Premium Movie Channels</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Sports Max 1</fullName>
            </value>
            <value>
                <fullName>Sports Max 2</fullName>
            </value>
            <value>
                <fullName>Sports Max 1 &amp; 2</fullName>
            </value>
            <value>
                <fullName>Sports Max Pack</fullName>
            </value>
            <value>
                <fullName>Sports Pack</fullName>
            </value>
            <value>
                <fullName>Tier Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>