DigicielFull/force-app/main/default/objects/Lead/fields/Are_you_using_Microsoft_Office__c.field-meta.xml
<CustomField>
    <fullName>Are_you_using_Microsoft_Office__c</fullName>
    <label>Are you using Microsoft Office?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Existing_Office_365_User__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>