DigicielFull/force-app/main/default/objects/Lead/fields/Billing_Options__c.field-meta.xml
<CustomField>
    <fullName>Billing_Options__c</fullName>
    <label>Billing Options</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper Billing</fullName>
            </value>
            <value>
                <fullName>E-Billing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>