DigicielFull/force-app/main/default/objects/Lead/fields/Billing_System_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_System_ID__c</fullName>
    <label>Billing System ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>