DigicielFull/force-app/main/default/objects/Lead/fields/Broadband_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Broadband_Equipment__c</fullName>
    <label>Broadband Equipment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Modem</fullName>
            </value>
            <value>
                <fullName>Wifi-Modem</fullName>
            </value>
            <value>
                <fullName>Wifi Router and Modem</fullName>
            </value>
            <value>
                <fullName>-None-</fullName>
            </value>
            <value>
                <fullName>Wifi Modem – Netgear</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>