DigicielFull/force-app/main/default/objects/Lead/fields/Budget_List__c.field-meta.xml
<CustomField>
    <fullName>Budget_List__c</fullName>
    <label>Budget</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$0 - $2,499</fullName>
            </value>
            <value>
                <fullName>$2,500 - $4,999</fullName>
            </value>
            <value>
                <fullName>$5,000 - $9,999</fullName>
            </value>
            <value>
                <fullName>$10,000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>