DigicielFull/force-app/main/default/objects/Lead/fields/Business_Issues_Driving_the_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Business_Issues_Driving_the_Purchase__c</fullName>
    <inlineHelpText>Compelling event driving the business need</inlineHelpText>
    <label>Business Issues Driving the Purchase</label>
    <type>TextArea</type>
</CustomField>