DigicielFull/force-app/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>zDeprecated City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>