DigicielFull/force-app/main/default/objects/Lead/fields/City_mappingContact__c.field-meta.xml
<CustomField>
    <fullName>City_mappingContact__c</fullName>
    <description>DO NOT PLACE IT IN THE LAYOUT!!!
THIS IS ONLY TO SEND THE VALUE TO THE CONTACT RECORD WHEN LEAD CONVERSION.</description>
    <formula>City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>City_mappingContact</label>
    <type>Text</type>
</CustomField>