DigicielFull/force-app/main/default/objects/Lead/fields/Community_Contact_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact_Mobile__c</fullName>
    <label>Community Contact Mobile</label>
    <type>Phone</type>
</CustomField>