DigicielFull/force-app/main/default/objects/Lead/fields/Community_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Community_Contact_Phone__c</fullName>
    <label>Community Contact Phone</label>
    <type>Phone</type>
</CustomField>