DigicielFull/force-app/main/default/objects/Lead/fields/Community_Country__c.field-meta.xml
<CustomField>
    <fullName>Community_Country__c</fullName>
    <formula>TEXT(Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Country</label>
    <type>Text</type>
</CustomField>