DigicielFull/force-app/main/default/objects/Lead/fields/Community_Parish_Region_Department__c.field-meta.xml
<CustomField>
    <fullName>Community_Parish_Region_Department__c</fullName>
    <formula>Text( Parish_Region_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Parish/Region/Department</label>
    <type>Text</type>
</CustomField>