DigicielFull/force-app/main/default/objects/Lead/fields/Community_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Community_Street_Address__c</fullName>
    <label>Community Street Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>