DigicielFull/force-app/main/default/objects/Lead/fields/Converter_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Converter_Deposit__c</fullName>
    <label>Converter Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>