DigicielFull/force-app/main/default/objects/Lead/fields/Country_mapping_Contact__c.field-meta.xml
<CustomField>
    <fullName>Country_mapping_Contact__c</fullName>
    <description>DO NOT PLACE IT IN THE LAYOUT!!!
THIS IS ONLY TO SEND THE VALUE TO THE CONTACT RECORD WHEN LEAD CONVERSION.</description>
    <formula>TEXT(Country__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country mapping Contact</label>
    <type>Text</type>
</CustomField>