DigicielFull/force-app/main/default/objects/Lead/fields/Coverage_Area_Values__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Area_Values__c</fullName>
    <label>Coverage Area Values</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FO - Soho Panama</fullName>
            </value>
            <value>
                <fullName>FO - Samuel Lewis</fullName>
            </value>
            <value>
                <fullName>FO - Bella Vista</fullName>
            </value>
            <value>
                <fullName>FO - Edificios Ufinet</fullName>
            </value>
            <value>
                <fullName>FO - Panama</fullName>
            </value>
            <value>
                <fullName>FO - Resto del Pais</fullName>
            </value>
            <value>
                <fullName>MW - Nacional</fullName>
            </value>
            <value>
                <fullName>VSAT - Nacional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>