DigicielFull/force-app/main/default/objects/Lead/fields/Current_Email_Solution__c.field-meta.xml
<CustomField>
    <fullName>Current_Email_Solution__c</fullName>
    <label>Current Email Solution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Existing_Office_365_User__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hotmail.com</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Outlook.com</fullName>
            </value>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Yahoo</fullName>
            </value>
            <value>
                <fullName>Digicel POP3</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>