DigicielFull/force-app/main/default/objects/Lead/fields/Current_Marketing_Provider__c.field-meta.xml
<CustomField>
    <fullName>Current_Marketing_Provider__c</fullName>
    <label>Current Marketing Provider</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Claro</fullName>
            </value>
            <value>
                <fullName>Telefonica</fullName>
            </value>
            <value>
                <fullName>Millicom</fullName>
            </value>
            <value>
                <fullName>GTT</fullName>
            </value>
            <value>
                <fullName>SMS Communications</fullName>
            </value>
            <value>
                <fullName>Jamaica Observer</fullName>
            </value>
            <value>
                <fullName>Extra</fullName>
            </value>
            <value>
                <fullName>Vigilante</fullName>
            </value>
            <value>
                <fullName>Amigoe</fullName>
            </value>
            <value>
                <fullName>Loop</fullName>
            </value>
            <value>
                <fullName>CaytonE</fullName>
            </value>
            <value>
                <fullName>Lime</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>UTS</fullName>
            </value>
            <value>
                <fullName>Setar</fullName>
            </value>
            <value>
                <fullName>Orange Caraibes</fullName>
            </value>
            <value>
                <fullName>Only Numericable</fullName>
            </value>
            <value>
                <fullName>Dauphin Telecom</fullName>
            </value>
            <value>
                <fullName>Mediaserv Canal</fullName>
            </value>
            <value>
                <fullName>TCI Weekly News</fullName>
            </value>
            <value>
                <fullName>TCI Sun</fullName>
            </value>
            <value>
                <fullName>Constant Contact</fullName>
            </value>
            <value>
                <fullName>Wi-Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>