DigicielFull/force-app/main/default/objects/Lead/fields/Current_Rate_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Current_Rate_in_Place__c</fullName>
    <label>Current Rate in Place</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>