DigicielFull/force-app/main/default/objects/Lead/fields/Current_Solution_in_Place__c.field-meta.xml
<CustomField>
    <fullName>Current_Solution_in_Place__c</fullName>
    <inlineHelpText>What is the customer using today?</inlineHelpText>
    <label>Current Solution in Place</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>