DigicielFull/force-app/main/default/objects/Lead/fields/Decision_Making_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Making_Process__c</fullName>
    <inlineHelpText>Who is involved and how will the decision be made? Include in Opportunity Contact Roles, when the lead is converted to an opportunity.</inlineHelpText>
    <label>Decision Making Process</label>
    <type>TextArea</type>
</CustomField>