DigicielFull/force-app/main/default/objects/Lead/fields/Deposit_Collected__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Collected__c</fullName>
    <label>Deposit Collected</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>