DigicielFull/force-app/main/default/objects/Lead/fields/DIA_download_speed_MB__c.field-meta.xml
<CustomField>
    <fullName>DIA_download_speed_MB__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the Digicel DIA download speed in MB.  Leave set to 0 if DIA provided by a competitor.</inlineHelpText>
    <label>DIA download speed (MB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>