DigicielFull/force-app/main/default/objects/Lead/fields/DIA_Office_365_Credits__c.field-meta.xml
<CustomField>
    <fullName>DIA_Office_365_Credits__c</fullName>
    <formula>FLOOR(( DIA_download_speed_MB__c + DIA_upload_speed_MB__c )/2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DIA Office 365 Credits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>