DigicielFull/force-app/main/default/objects/Lead/fields/Easily_Serviceable_Address__c.field-meta.xml
<CustomField>
    <fullName>Easily_Serviceable_Address__c</fullName>
    <label>Easily Serviceable Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>