DigicielFull/force-app/main/default/objects/Lead/fields/Existing_Infrastructure__c.field-meta.xml
<CustomField>
    <fullName>Existing_Infrastructure__c</fullName>
    <label>Existing Infrastructure</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct TV</fullName>
            </value>
            <value>
                <fullName>Dish Network</fullName>
            </value>
            <value>
                <fullName>BLINK</fullName>
            </value>
            <value>
                <fullName>GREEN DOT</fullName>
            </value>
            <value>
                <fullName>D/VALE CABLE COMPANY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>