DigicielFull/force-app/main/default/objects/Lead/fields/FIbre_Zone__c.field-meta.xml
<CustomField>
    <fullName>FIbre_Zone__c</fullName>
    <label>FIbre Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fibre Zone 1 - Port of Spain</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 2 - Laventille / Barataria</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 3 - Chaguanas Town Centre</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 4 - Curepe / Tunapuna</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 5 - Frederick Settlement</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 6 - Cunupia</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 7 - Piarco South</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 9 - Golden Grove Road</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 10 - Diego Martin</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 11 - Diamond Vale</fullName>
            </value>
            <value>
                <fullName>Fibre Zone 12 - West Moorings</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>