DigicielFull/force-app/main/default/objects/Lead/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>