DigicielFull/force-app/main/default/objects/Lead/fields/GPS_Latitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Latitude__c</fullName>
    <formula>GPS_Coordinates__Latitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPS Latitude</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>