DigicielFull/force-app/main/default/objects/Lead/fields/GPS_Longitude__c.field-meta.xml
<CustomField>
    <fullName>GPS_Longitude__c</fullName>
    <formula>GPS_Coordinates__Longitude__s</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPS Longitude</label>
    <precision>18</precision>
    <scale>12</scale>
    <type>Number</type>
</CustomField>